--- a/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
@@ -267,7 +267,7 @@
 
                 <a href="@Herramientas.EnlaceAcortador.Generar(juego.Enlace, juego.Tipo, usuarioPatreon)" class="boton-pequeño" style="padding: 0px; text-align: center; position: relative; @fondoColor" target="_blank">
                     <div style="width: 100%; text-align: center; padding: 5px;">
-                        <img src="@juego.Imagen" style="max-width: 100%; height: 100%;" alt="@juego.Nombre" />
+                        <img src="@Herramientas.Ficheros.Imagenes.ServidorExterno(juego.Imagen)" style="max-width: 100%; height: 100%;" alt="@juego.Nombre" />
 
                         <div style="margin-top: 10px; margin-bottom: 5px; text-align: center; padding: 5px;">
                             @{
@@ -275,11 +275,11 @@
                             }
 
                             <div style="display: flex; align-items: center; justify-content: center; gap: 20px; height: 40px;">
-                                <img src="@gratis.ImagenLogo" style="max-width: 140px; max-width: 140px;" alt="Store" />
+                                <img src="@Herramientas.Ficheros.Imagenes.ServidorExterno(gratis.ImagenLogo)" style="max-width: 140px; max-width: 140px;" alt="Store" />
 
                                 @if (gratis.DRMEnseñar == true)
                                 {
-                                    <img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="width: 28px; height: 28px;" alt="DRM" />
+                                    <img src="@Herramientas.Ficheros.Imagenes.ServidorExterno(Juegos.JuegoDRM2.SacarImagen(juego.DRM))" style="width: 28px; height: 28px;" alt="DRM" />
                                 }
                             </div>                            
                         </div>
